# LED_Program

LED/: CMakeLists.txt  LED.pro  Led_Component.cpp  Led_Component.h  authorinformation.cpp  authorinformation.h  authorinformation.ui  background.qrc  helpdialog.cpp  helpdialog.h  helpdialog.ui  helpimages.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialization.txt  toolbaricons.qrc
LED/Pictures/: TEMPLATE.pages
build-LED-Desktop_Qt_5_13_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_authorinformation.cpp  moc_helpdialog.cpp  moc_mainwindow.cpp  qrc_helpimages.cpp  ui_authorinformation.h  ui_helpdialog.h  ui_mainwindow.h
build-LED-Desktop_Qt_5_13_0_clang_64bit-Debug/LED.app/Contents/: Info.plist
build-LED-Desktop_Qt_5_13_0_clang_64bit-Debug/LED.app/Contents/MacOS/: LED
